# olafpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: convolve.h  structure.hpp
src/: convolve.cpp  main.cpp  structure.cpp
